[project]
name = "phoenix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.10.0",
    "faiss-cpu>=1.13.2",
    "langchain>=1.2.7",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "langgraph-checkpoint-postgres>=3.0.4",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langsmith>=0.6.6",
    "psycopg[binary]>=3.3.2",
    "pypdf>=6.7.0",
    "streamlit>=1.53.1",
    "youtube-transcript-api>=1.2.4",
]
